# mealmetrics

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
mealsmetrics/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
reports/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
reports/management/commands/: seed_food_logs.py
reports/migrations/: 0001_initial.py  0002_foodlog.py
tests/: test_reports.py
