[project]
name = "mealmetrics"
version = "0.1.0"
description = "A report generator for Miran app take-home task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psycopg-binary>=3.2.9",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]
